added the option to just upload or take picutre on gradio

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "6203f449",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import torch\n",
@@ -26,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "a0c473ca",
    "metadata": {},
    "outputs": [],
@@ -37,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "4c10c196",
    "metadata": {},
    "outputs": [
@@ -311,7 +302,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "12a8abbb",
    "metadata": {},
    "outputs": [],
@@ -339,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "1e1a0cfa",
    "metadata": {},
    "outputs": [],
@@ -435,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "40230045",
    "metadata": {},
    "outputs": [],
@@ -487,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "71af8736",
    "metadata": {},
    "outputs": [
@@ -505,9 +496,7 @@
      "text": [
       "Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
-      "To create a public link, set `share=True` in `launch()`.\n",
-      "IMPORTANT: You are using gradio version 3.41.2, however version 4.44.1 is available, please upgrade.\n",
-      "--------\n"
+      "To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
@@ -526,7 +515,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -534,12 +523,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "IMPORTANT: You are using gradio version 3.41.2, however version 4.44.1 is available, please upgrade.\n",
+      "--------\n",
       "\n",
-      "0: 320x416 1 PAPER, 202.0ms\n",
-      "Speed: 81.2ms preprocess, 202.0ms inference, 1.9ms postprocess per image at shape (1, 3, 320, 416)\n",
+      "0: 288x416 1 PAPER, 109.0ms\n",
+      "Speed: 2.9ms preprocess, 109.0ms inference, 1.3ms postprocess per image at shape (1, 3, 288, 416)\n",
       "\n",
-      "0: 320x416 1 PAPER, 197.2ms\n",
-      "Speed: 2.7ms preprocess, 197.2ms inference, 2.1ms postprocess per image at shape (1, 3, 320, 416)\n"
+      "0: 288x416 1 PAPER, 96.2ms\n",
+      "Speed: 1.6ms preprocess, 96.2ms inference, 0.8ms postprocess per image at shape (1, 3, 288, 416)\n"
      ]
     },
     {
@@ -578,142 +569,6 @@
       "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 329, in _scale\n",
       "    if n > m and a.max() < 2**m:\n",
       "TypeError: '<' not supported between instances of 'NoneType' and 'int'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 320x416 1 CARDBOARD, 169.5ms\n",
-      "Speed: 280.1ms preprocess, 169.5ms inference, 1.6ms postprocess per image at shape (1, 3, 320, 416)\n",
-      "\n",
-      "0: 320x416 1 CARDBOARD, 201.3ms\n",
-      "Speed: 3.4ms preprocess, 201.3ms inference, 3.1ms postprocess per image at shape (1, 3, 320, 416)\n",
-      "\n",
-      "0: 224x416 3 CARDBOARDs, 1 PAPER, 208.1ms\n",
-      "Speed: 2.7ms preprocess, 208.1ms inference, 2.6ms postprocess per image at shape (1, 3, 224, 416)\n",
-      "\n",
-      "0: 416x416 2 CARDBOARDs, 1 PAPER, 429.5ms\n",
-      "Speed: 5.4ms preprocess, 429.5ms inference, 3.4ms postprocess per image at shape (1, 3, 416, 416)\n",
-      "\n",
-      "0: 224x416 1 CARDBOARD, 391.5ms\n",
-      "Speed: 4.4ms preprocess, 391.5ms inference, 3.5ms postprocess per image at shape (1, 3, 224, 416)\n",
-      "\n",
-      "0: 224x416 1 CARDBOARD, 181.0ms\n",
-      "Speed: 2.8ms preprocess, 181.0ms inference, 1.6ms postprocess per image at shape (1, 3, 224, 416)\n",
-      "\n",
-      "0: 416x320 2 CARDBOARDs, 1 PAPER, 226.0ms\n",
-      "Speed: 5.6ms preprocess, 226.0ms inference, 1.6ms postprocess per image at shape (1, 3, 416, 320)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\routes.py\", line 488, in run_predict\n",
-      "    output = await app.get_blocks().process_api(\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1434, in process_api\n",
-      "    data = self.postprocess_data(fn_index, result[\"prediction\"], state)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1335, in postprocess_data\n",
-      "    prediction_value = block.postprocess(prediction_value)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\components\\image.py\", line 314, in postprocess\n",
-      "    return processing_utils.encode_array_to_base64(y)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 104, in encode_array_to_base64\n",
-      "    pil_image = Image.fromarray(_convert(image_array, np.uint8, force_copy=False))\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 476, in _convert\n",
-      "    image = _scale(image, 8 * itemsize_in - 1, 8 * itemsize_out)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 329, in _scale\n",
-      "    if n > m and a.max() < 2**m:\n",
-      "TypeError: '<' not supported between instances of 'NoneType' and 'int'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\routes.py\", line 488, in run_predict\n",
-      "    output = await app.get_blocks().process_api(\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1434, in process_api\n",
-      "    data = self.postprocess_data(fn_index, result[\"prediction\"], state)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1335, in postprocess_data\n",
-      "    prediction_value = block.postprocess(prediction_value)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\components\\image.py\", line 314, in postprocess\n",
-      "    return processing_utils.encode_array_to_base64(y)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 104, in encode_array_to_base64\n",
-      "    pil_image = Image.fromarray(_convert(image_array, np.uint8, force_copy=False))\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 476, in _convert\n",
-      "    image = _scale(image, 8 * itemsize_in - 1, 8 * itemsize_out)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 329, in _scale\n",
-      "    if n > m and a.max() < 2**m:\n",
-      "TypeError: '<' not supported between instances of 'NoneType' and 'int'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 320x416 1 GLASS, 1 PAPER, 245.7ms\n",
-      "Speed: 3.8ms preprocess, 245.7ms inference, 2.4ms postprocess per image at shape (1, 3, 320, 416)\n",
-      "\n",
-      "0: 320x416 1 GLASS, 1 PAPER, 195.0ms\n",
-      "Speed: 3.3ms preprocess, 195.0ms inference, 2.0ms postprocess per image at shape (1, 3, 320, 416)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\routes.py\", line 488, in run_predict\n",
-      "    output = await app.get_blocks().process_api(\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1434, in process_api\n",
-      "    data = self.postprocess_data(fn_index, result[\"prediction\"], state)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1335, in postprocess_data\n",
-      "    prediction_value = block.postprocess(prediction_value)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\components\\image.py\", line 314, in postprocess\n",
-      "    return processing_utils.encode_array_to_base64(y)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 104, in encode_array_to_base64\n",
-      "    pil_image = Image.fromarray(_convert(image_array, np.uint8, force_copy=False))\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 476, in _convert\n",
-      "    image = _scale(image, 8 * itemsize_in - 1, 8 * itemsize_out)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 329, in _scale\n",
-      "    if n > m and a.max() < 2**m:\n",
-      "TypeError: '<' not supported between instances of 'NoneType' and 'int'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\routes.py\", line 488, in run_predict\n",
-      "    output = await app.get_blocks().process_api(\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1434, in process_api\n",
-      "    data = self.postprocess_data(fn_index, result[\"prediction\"], state)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\blocks.py\", line 1335, in postprocess_data\n",
-      "    prediction_value = block.postprocess(prediction_value)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\components\\image.py\", line 314, in postprocess\n",
-      "    return processing_utils.encode_array_to_base64(y)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 104, in encode_array_to_base64\n",
-      "    pil_image = Image.fromarray(_convert(image_array, np.uint8, force_copy=False))\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 476, in _convert\n",
-      "    image = _scale(image, 8 * itemsize_in - 1, 8 * itemsize_out)\n",
-      "  File \"c:\\Users\\Gauriel\\anaconda3\\envs\\DL\\lib\\site-packages\\gradio\\processing_utils.py\", line 329, in _scale\n",
-      "    if n > m and a.max() < 2**m:\n",
-      "TypeError: '<' not supported between instances of 'NoneType' and 'int'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 320x416 1 PAPER, 210.4ms\n",
-      "Speed: 7.4ms preprocess, 210.4ms inference, 2.2ms postprocess per image at shape (1, 3, 320, 416)\n",
-      "\n",
-      "0: 320x416 1 PAPER, 214.5ms\n",
-      "Speed: 2.8ms preprocess, 214.5ms inference, 1.5ms postprocess per image at shape (1, 3, 320, 416)\n",
-      "\n",
-      "0: 288x416 1 PAPER, 209.0ms\n",
-      "Speed: 5.6ms preprocess, 209.0ms inference, 1.5ms postprocess per image at shape (1, 3, 288, 416)\n",
-      "\n",
-      "0: 192x416 1 PAPER, 193.2ms\n",
-      "Speed: 4.9ms preprocess, 193.2ms inference, 2.1ms postprocess per image at shape (1, 3, 192, 416)\n",
-      "\n",
-      "0: 192x416 1 PAPER, 157.4ms\n",
-      "Speed: 6.6ms preprocess, 157.4ms inference, 3.1ms postprocess per image at shape (1, 3, 192, 416)\n"
      ]
     }
    ],
@@ -721,7 +576,8 @@
     "gr.Interface(\n",
     "    fn=predict,\n",
     "    inputs=[\n",
-    "        gr.Image(source=\"webcam\", tool=\"editor\", label=\"Input Image\"),  # Webcam input\n",
+    "        # gr.Image(source=\"webcam\", tool=\"editor\", label=\"Input Image\"),  # Webcam input\n",
+    "        gr.Image(label=\"Upload or Take Picture\"), #Upload or Take Picture\n",
     "        gr.Radio([\"yolo\", \"vit\"], label=\"Choose Model\", value=\"yolo\")   # Model selector\n",
     "    ],\n",
     "    outputs=gr.Image(label=\"Annotated Output\"),\n",
